--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -34,7 +34,6 @@
     <div class="container hidden-info">
       <div class="setup-buttons" id="setup-buttons">
         <button id="start" class="btn">Start Game</button>
-        <button id="rotate" class="btn">Rotate Your Ships</button>
       </div>
       <h3 id="whose-go" class="info-text">Your Go</h3>
       <h3 id="info" class="info-text"></h3>
@@ -42,7 +41,7 @@
 
     <div class="container">
       <div class="grid-display">
-        <div class="ship cruiser-container" draggable="true"><div id="cruiser-0"></div><div id="cruiser-1"></div><div id="cruiser-2"></div></div>
+        <div class="ship cruiser-container" draggable="true"><div id="cruiser-0"></div><div id="cruiser-1"></div><div id="cruiser-1"></div><div id="cruiser-2"></div></div>
         <div class="ship battleship-container" draggable="true"><div id="battleship-0"></div><div id="battleship-1"></div><div id="battleship-2"></div><div id="battleship-3"></div></div>
       </div>
     </div>
