--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Battle Ships Login</title>
+    <title>4ARM Battleship Game</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
